--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
 
 </head>
 <body>
+  <div class="wrap">
   <div class="photo-wrap">
     <img class="photo" src="images/image-tanya.jpg" alt="Tanya Sinclair Portrait">
     <div class="nav">
       <div class="prev"><img src="images/icon-prev.svg" alt="previous button"></div>
       <div class="next"><img src="images/icon-next.svg" alt="next button"></div>
     </div>
+    
   </div>
+  
   
   
   <div class="content">
@@ -48,5 +51,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/jeantiston">Jean Tiston</a>.
   </div>
+</div>
 </body>
 </html>
