--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
   
   
   <div class="content">
-    <p class="quote">
+    <span class="quote">
       “ I’ve been interested in coding for a while but never taken the jump, until now. 
       I couldn’t recommend this course enough. I’m now in the job of my dreams and so 
       excited about the future. ”
-    </p>
-    <p class="name">
+    </span>
+    <span class="name">
       Tanya Sinclair
-    </p>
-    <p class="role">
+    </span>
+    <span class="role">
       UX Engineer
-    </p>
+    </span>
 </div>
 <!-- 
   “ If you want to lay the best foundation possible I’d recommend taking this course. 
@@ -47,10 +47,12 @@
   John Tarkpor
   Junior Front-end Developer -->
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/jeantiston">Jean Tiston</a>.
-  </div>
+
+</div>
+
+<div class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+  Coded by <a href="https://github.com/jeantiston">Jean Tiston</a>.
 </div>
 </body>
 </html>
