--- a/index.html
+++ b/index.html
@@ -16,20 +16,19 @@
 </head>
 <body>
   <div class="wrap">
-  <div class="photo-wrap">
-    <img class="photo" src="images/image-tanya.jpg" alt="Tanya Sinclair Portrait">
-    <img class="photo" src="images/image-john.jpg" alt="John Portrait" style="display: none;">
-    <img class="photo" src="images/image-mary.jpg" alt="Mary Portrait" style="display: none;">
+    <div class="photo-wrap">
+      <img class="photo" src="images/image-tanya.jpg" alt="Tanya Sinclair Portrait">
+      <img class="photo" src="images/image-john.jpg" alt="John Portrait" style="display: none;">
+      <img class="photo" src="images/image-mary.jpg" alt="Mary Portrait" style="display: none;">
 
 
-    <div class="nav">
-      <div class="prev" onclick="plusSlides(-1)"><img src="images/icon-prev.svg" alt="previous button"></div>
-      <div class="next" onclick="plusSlides(1)"><img src="images/icon-next.svg" alt="next button"></div>
+      <div class="nav">
+        <div class="prev" ><img src="images/icon-prev.svg" alt="previous button"></div>
+        <div class="next" ><img src="images/icon-next.svg" alt="next button"></div>
+      </div>
+      
     </div>
     
-  </div>
-  
-  
   
   <div class="content">
     <div class="testimonial">
@@ -78,7 +77,7 @@
 
   
 
-</div>
+
 
 <div class="attribution">
   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
