--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
         I couldn’t recommend this course enough. I’m now in the job of my dreams and so 
         excited about the future. ”
       </span>
+      <div class="person">
       <span class="name">
         Tanya Sinclair
       </span>
       <span class="role">
         UX Engineer
       </span>
+    </div>
     </div>
 
     <div class="testimonial" style="display: none;">
@@ -51,6 +53,7 @@
         The depth the instructors go into is incredible. I now feel so confident about 
         starting up as a professional developer. ”
       </span>
+      <div class="person">
       <span class="name">
         John Tarkpor
       </span>
@@ -58,21 +61,26 @@
         Junior Front-end Developer
       </span>
     </div>
+    </div>
+
+    <div class="testimonial" style="display: none;">
+      <span class="quote">
+        “ I love how this course has helped me to learn coding in a practical way.
+        I really enjoyed it and I'm sure you will also get value in it.
+        I can now use my graphic design skills to develop beautiful websites”
+      </span>
+      <div class="person">
+        <span class="name">
+          Mary Gray
+        </span>
+        <span class="role">
+          Graphic Designer
+        </span>
+      </div>
+    </div>
   </div>
 
-  <div class="testimonial" style="display: none;">
-    <span class="quote">
-      “ I love how this course has helped me to learn coding in a practical way.
-      I really enjoyed it and I'm sure you will also get value in it.
-      I can now use my graphic design skills to develop beautiful websites”
-    </span>
-    <span class="name">
-      Mary Gray
-    </span>
-    <span class="role">
-      Graphic Designer
-    </span>
-  </div>
+  
 </div>
 
   
